[patch] fix about us width not expanding on tablet

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -11,7 +11,6 @@
 
 .leftPanel {
   border-radius: 10px;
-  max-width: 450px;
   padding: 24px;
 }
 
@@ -23,6 +22,10 @@
 }
 
 @media only screen and (min-width: 780px) {
+  .leftPanel {
+    max-width: 450px;
+  }
+
   .homeContainer {
     flex-direction: row;
     margin: -50px auto 2rem auto;
